Update dependecies
JUnit 6 sounds fancy, but it's a really boring upgrade :/